--- a/package.json
+++ b/package.json
@@ -12,7 +12,34 @@
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-masked-view/masked-view": "^0.2.7",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/material-top-tabs": "^6.2.4",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
+    "expo-fast-image": "^1.1.3",
+    "expo-linear-gradient": "~12.0.1",
+    "lottie-react-native": "^5.1.4",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
+     "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^4.12.4",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-styled-components": "^2.1.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "rn-country-picker": "^1.0.1"
+
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
