--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-btr": "^2.2.0",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated-carousel": "^3.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-styled-components": "^2.1.0",
