--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.3.3",
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
     "expo-fast-image": "^1.1.3",
     "expo-linear-gradient": "~12.0.1",
@@ -34,12 +35,14 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.0.0",
+    "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-simple-toast": "^2.0.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-styled-components": "^2.1.0",
     "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
     "rn-country-picker": "^1.0.1"
   },
   "devDependencies": {
