--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native": "0.71.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-btr": "^2.2.0",
+    "react-native-device-info": "^10.4.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
@@ -36,6 +38,7 @@
     "react-native-reanimated-carousel": "^3.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-styled-components": "^2.1.0",
     "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.5",
