--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.12.5",
