--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.4.4",
     "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
+    "react-moment": "^1.1.3",
     "react-native": "0.71.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-btr": "^2.2.0",
