--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~48.0.5",
     "expo-device": "~5.2.1",
     "expo-fast-image": "^1.1.3",
+    "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.4",
